--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Soberania Digital
 description: Alternativas europeias para soberania digital
 author: Luís Candeias
-theme: minima
+theme: modernist
 plugins:
   - jekyll-feed
 
